--- a/deno.json
+++ b/deno.json
@@ -14,11 +14,11 @@
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
-    "statery": "https://esm.sh/statery@0.5.4?alias=react:preact/compat&deps=preact@10.11.0",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.0.3",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.0.1",
     "tabler/": "https://deno.land/x/tabler_icons_tsx@0.0.3/tsx/",
     "twind": "https://esm.sh/@twind/core@1.1.3",
+    "twind/": "https://esm.sh/@twind/core@1.1.3/",
     "twind-preset-autoprefix": "https://esm.sh/@twind/preset-autoprefix@1.0.7",
     "twind-preset-tailwind": "https://esm.sh/@twind/preset-tailwind@1.1.4",
     "twind_fresh_plugin/": "https://deno.land/x/fresh_twindv1_plugin@v1.3.0/",
