--- a/deno.json
+++ b/deno.json
@@ -2,20 +2,20 @@
   "tasks": {
     "start": "deno run -A --unstable --watch=static/,routes/ dev.ts",
     "build": "deno run -A dev.ts build",
-    "preview": "deno run -A main.ts"
+    "preview": "deno run -A main.ts",
+    "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx"
   },
   "imports": {
     "@/": "./",
     "$fresh/": "https://deno.land/x/fresh@1.4.2/",
     "fresh-session": "https://deno.land/x/fresh_session@0.2.0/mod.ts",
-    "fresh-store": "https://deno.land/x/fresh_store@v1.0.2/mod.ts",
     "deno_grant": "https://deno.land/x/deno_grant@v0.3.0/mod.ts",
     "oauth2Client": "https://deno.land/x/oauth2_client@v1.0.2/mod.ts",
     "preact": "https://esm.sh/preact@10.15.1",
     "preact/": "https://esm.sh/preact@10.15.1/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.0.3",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.0.1",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
     "tabler/": "https://deno.land/x/tabler_icons_tsx@0.0.3/tsx/",
     "twind": "https://esm.sh/@twind/core@1.1.3",
     "twind/": "https://esm.sh/@twind/core@1.1.3/",
