--- a/deno.json
+++ b/deno.json
@@ -7,15 +7,15 @@
   },
   "imports": {
     "@/": "./",
-    "$fresh/": "https://deno.land/x/fresh@1.4.3/",
+    "$fresh/": "https://deno.land/x/fresh@1.5.2/",
     "fresh-session": "https://deno.land/x/fresh_session@0.2.2/mod.ts",
     "deno_grant": "https://deno.land/x/deno_grant@v0.3.0/mod.ts",
     "oauth2Client": "https://deno.land/x/oauth2_client@v1.0.2/mod.ts",
-    "preact": "https://esm.sh/preact@10.15.1",
-    "preact/": "https://esm.sh/preact@10.15.1/",
-    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
+    "preact": "https://esm.sh/preact@10.18.1",
+    "preact/": "https://esm.sh/preact@10.18.1/",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.2",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
     "tabler/": "https://deno.land/x/tabler_icons_tsx@0.0.3/tsx/",
     "twind": "https://esm.sh/@twind/core@1.1.3",
     "twind/": "https://esm.sh/@twind/core@1.1.3/",
@@ -26,24 +26,7 @@
     "$std/": "https://deno.land/std@0.178.0/",
     "$ga4": "https://raw.githubusercontent.com/denoland/ga4/main/mod.ts"
   },
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
-  },
-  "lint": {
-    "rules": {
-      "tags": [
-        "fresh",
-        "recommended"
-      ]
-    },
-    "exclude": [
-      "_fresh"
-    ]
-  },
-  "fmt": {
-    "exclude": [
-      "_fresh"
-    ]
-  }
+  "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
+  "lint": { "rules": { "tags": ["fresh", "recommended"] } },
+  "exclude": ["**/_fresh/*"]
 }
