Add styles, endpoints, and parsers for portal

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "Bearded Theme Arc Eggplant",
+  "workbench.colorTheme": "OM Theme (Night Owl Italic)",
   "deno.enable": true,
   "deno.lint": true,
   "editor.defaultFormatter": "denoland.vscode-deno"
