fync example in env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 GOOGLE_CLIENT_ID=googleclientid
 GOOGLE_CLIENT_SECRET=googlesecret
+FYNC_CLIENT_ID=xxxxxxxxxx
+FYNC_CLIENT_SECRET=xxxxxxxxxxxxxxx
 ENV=dev
 APP_KEY=keyforsession
