--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 GOOGLE_CLIENT_ID=googleclientid
 GOOGLE_CLIENT_SECRET=googlesecret
+DISCORD_CLIENT_ID=000000000000000
+DISCORD_CLIENT_SECRET=xxxxxxxxxxxxx
 FYNC_CLIENT_ID=xxxxxxxxxx
 FYNC_CLIENT_SECRET=xxxxxxxxxxxxxxx
 ENV=dev
