--- a/deno.json
+++ b/deno.json
@@ -5,23 +5,22 @@
     "preview": "deno run -A main.ts",
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx"
   },
+  "nodeModulesDir": true,
   "imports": {
     "@/": "./",
     "$fresh/": "https://deno.land/x/fresh@1.6.0/",
     "fresh-session": "https://deno.land/x/fresh_session@0.2.2/mod.ts",
     "deno_grant": "https://deno.land/x/deno_grant@v0.3.0/mod.ts",
     "oauth2Client": "https://deno.land/x/oauth2_client@v1.0.2/mod.ts",
-    "preact": "https://esm.sh/preact@10.18.1",
-    "preact/": "https://esm.sh/preact@10.18.1/",
+    "preact": "https://esm.sh/preact@10.19.2",
+    "preact/": "https://esm.sh/preact@10.19.2/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.2",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.1",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
     "tabler/": "https://deno.land/x/tabler_icons_tsx@0.0.5/tsx/",
-    "twind": "https://esm.sh/@twind/core@1.1.3",
-    "twind/": "https://esm.sh/@twind/core@1.1.3/",
-    "twind-preset-autoprefix": "https://esm.sh/@twind/preset-autoprefix@1.0.7",
-    "twind-preset-tailwind": "https://esm.sh/@twind/preset-tailwind@1.1.4",
-    "twind_fresh_plugin/": "https://deno.land/x/fresh_twindv1_plugin@v1.3.0/",
+    "tailwindcss": "npm:tailwindcss@3.3.5",
+    "tailwindcss/": "npm:/tailwindcss@3.3.5/",
+    "tailwindcss/plugin": "npm:/tailwindcss@3.3.5/plugin.js",
     "zod": "https://deno.land/x/zod@v3.16.1/mod.ts",
     "$std/": "https://deno.land/std@0.205.0/",
     "$ga4": "https://raw.githubusercontent.com/denoland/ga4/main/mod.ts",
