--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,15 @@ jobs:
           deno-version: v1.x
 
       - name: Build step
+        env: 
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          DISCORD_CLIENT_ID: ${{ secrets.DISCORD_CLIENT_ID }}
+          DISCORD_CLIENT_SECRET: ${{ secrets.DISCORD_CLIENT_SECRET }}
+          FYNC_CLIENT_ID: ${{ secrets.FYNC_CLIENT_ID }}
+          FYNC_CLIENT_SECRET: ${{ secrets.FYNC_CLIENT_SECRET }}
+          ENV: ${{ secrets.ENV }}
+          APP_KEY: ${{ secrets.APP_KEY }}
         run: "deno task build" # 📝 Update the build command(s) if necessary
 
       - name: Upload to Deno Deploy
