--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,5 @@
 {
+  "lock": false,
   "tasks": {
     "start": "deno run -A --unstable --watch=static/,routes/ dev.ts",
     "build": "deno run -A dev.ts build",
